--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,11 @@ project(CHIP_8 C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_executable(CHIP_8 main.c)
+find_package(SDL2 REQUIRED)
+
+add_executable(CHIP_8 main.c
+        src/CHIP8.c
+        include/CHIP8.h)
+
+target_include_directories(CHIP_8 PUBLIC include)
+target_link_libraries(CHIP_8 SDL2::SDL2)
